--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="advanced_settings">ZenParts</string>
+    <string name="advanced_settings">Msm8917Parts</string>
     <string name="advanced_settings_summary">Device Specific Customizations</string>
 
     <string name="display_title">Display</string>
@@ -98,5 +98,12 @@
 
     <!-- Device specific settings -->
     <string name="device_settings_app_name">Advanced settings</string>
+
+        <!-- Charging -->
+    <string name="smart_charging_main_title">Battery</string>
+    <string name="smart_charging_title">Smart Charging</string>
+    <string name="smart_charging_summary">Helps in cooling down &amp; also protects from over charging the device</string>
+    <string name="reset_stats_title">Reset battery stats</string>
+    <string name="reset_stats_summary">Battery stats will get reset when charging limit is reached</string>
 
 </resources>
